MDR-3398 - HWC20 Remove italic format

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -775,7 +775,7 @@ ul.time-and-counters li .counter-label {
   padding-top: 2em;
   border-bottom: 0;
   font-size: 1.7em;
-  font-style: italic;
+  font-style: normal;
   font-weight: 400;
   color: #dee999;
 }
@@ -917,7 +917,7 @@ ul.time-and-counters li .counter-label {
 }
 .news-item .news-item-content .title-news {
   font-size: 1.2em;
-  font-style: italic;
+  font-style: normal;
   color: #003399;
 }
 .news-item .news-item-content .summary-news {
@@ -1542,7 +1542,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
 .previous span:nth-child(1) {
   color: #003399;
   font-size: 18px;
-  font-style: italic;
+  font-style: normal;
 }
 .previous span:nth-child(2) {
   font-size: 12px;
@@ -1561,7 +1561,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
 .next span:nth-child(1) {
   color: #003399;
   font-size: 18px;
-  font-style: italic;
+  font-style: normal;
 }
 .next span:nth-child(2) {
   font-size: 12px;
@@ -1626,7 +1626,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
   font-weight: bold;
   line-height: 18px;
   text-decoration: none;
-  font-style: italic;
+  font-style: normal;
 }
 .box-latest-publications h2 a:hover {
   text-decoration: underline;
@@ -2341,7 +2341,7 @@ span.pages {
 }
 .publication-detail h2 {
   color: #003399;
-  font-style: italic;
+  font-style: normal;
   font-weight: 400;
   padding-top: 1em;
   clear: both;
@@ -2582,7 +2582,7 @@ span.pages {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row h2 a,
 .page-search .main-container #block-system-main .view .views-row h2 a {
-  font-style: italic;
+  font-style: normal;
   font-size: 2.1rem;
   font-weight: normal;
   padding-top: 0;
@@ -2605,7 +2605,7 @@ span.pages {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-title-field span a,
 .page-search .main-container #block-system-main .view .views-row .views-field-title-field span a {
-  font-style: italic;
+  font-style: normal;
   font-size: 2.1rem;
   font-weight: normal;
   padding-top: 0.6em;
@@ -3038,7 +3038,7 @@ div.workbench-info-block {
 }
 .page-campaign-partners-campaign-media-partners .hwc-alphabet-container a,
 .page-campaign-partners-enterprise-europe-network .hwc-alphabet-container a {
-  font-style: italic;
+  font-style: normal;
 }
 .page-campaign-partners-campaign-media-partners .col-md-2.col-sm-3.col-xs-6,
 .page-campaign-partners-enterprise-europe-network .col-md-2.col-sm-3.col-xs-6 {
@@ -3106,7 +3106,7 @@ div.workbench-info-block {
 }
 .panels-flexible-column-first .pane-node-field-mission-statement .pane-content {
   padding: 10px 20px 20px 20px;
-  font-style: italic;
+  font-style: normal;
   color: #FFF;
 }
 .panels-flexible-row .hwc-share-widget {
@@ -3379,7 +3379,7 @@ body.ocp .box-type-partner .pane-content {
   padding: 1em;
   padding-left: 1em;
   padding-right: 1em;
-  font-style: italic;
+  font-style: normal;
   color: #FFF;
 }
 body.ocp .box-type-partner .field-name-field-ceo-photo {
@@ -5401,7 +5401,7 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
 }
 .profile-edit-links-container .pane-node-profile-update-link .pane-content a.hwc-partner-private-link-block-title:first-child {
   font-weight: bold;
-  font-style: italic;
+  font-style: normal;
   margin-bottom: 15px;
 }
 .profile-edit-links-container .pane-node-profile-update-link .pane-content a.hwc-partner-private-link-block-title:first-child:before {
