--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -54,7 +54,7 @@
 		.required-form-fields{
 			float: right;
 			margin-top: 1em;
-			font-style: italic;
+			font-style: normal;
 		}
 		p a.inline-href, 
 		&.private-area #private .pane-custom p a.inline-href, 
@@ -256,7 +256,7 @@ ul.tabs--primary.nav.nav-tabs{
 		span.a2a_img_text{
 			color: @href-default-color;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 		.a2a_i_facebook{
 			  background: url("../images/content/facebook.png") no-repeat center;
@@ -315,7 +315,7 @@ ul.tabs--primary.nav.nav-tabs{
 				margin-bottom: 10px;
 				a{
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					font-size: 1.05em;
 				}
 				a:before{
@@ -344,7 +344,7 @@ ul.tabs--primary.nav.nav-tabs{
 			border-bottom: none;
 			a{
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				&:before{
 					content: ">";
 					padding-right: 0.35em;
@@ -580,13 +580,13 @@ ul.tabs--primary.nav.nav-tabs{
 			  color: @pagination-color;
 			  border: none;
 			  font-weight: bold;
-			  font-style: italic;
+			  font-style: normal;
 		}
 		li.pager-current{
 			padding-left: 14px;
 			padding-right: 14px;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 		.pager-ellipsis span{
 			padding-left: 0;
@@ -610,7 +610,7 @@ ul.tabs--primary.nav.nav-tabs{
 	}
 	.node-news{
 		h1{
-			font-style: italic;
+			font-style: normal;
 			font-weight: normal;
 			color: @h1-color-2;
 			font-size: @h1-size-2;
@@ -706,7 +706,7 @@ ul.tabs--primary.nav.nav-tabs{
 				color: @btn-default-bg;
 				background-color: transparent;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				a:before{
 					content: ">";
 					padding-right: 0.35em;
@@ -846,7 +846,7 @@ ul.tabs--primary.nav.nav-tabs{
 			a.external-link {
 			  color: #003399;
 			  font-weight: bold;
-			  font-style: italic;
+			  font-style: normal;
 			  font-size: 1.3em;
 			  &:before {
 				  content: "> ";
@@ -975,7 +975,7 @@ ul.tabs--primary.nav.nav-tabs{
 			padding-right: 3px;
 		}
 		a{
-			font-style: italic;
+			font-style: normal;
 			font-weight: bold;
 		}
 		.field-name-field-twin-infographics{
@@ -1005,7 +1005,7 @@ ul.tabs--primary.nav.nav-tabs{
 			color: @btn-default-bg;
 			background-color: transparent;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			padding-right: 20px;
 			&:before{
 				content: "";
@@ -1017,7 +1017,7 @@ ul.tabs--primary.nav.nav-tabs{
 	div[class*='node-']{
 		h1{
 			text-align: center;
-			font-style: italic;
+			font-style: normal;
 			font-weight: lighter;
 			color: @h1-color-2;
 			font-size: @h1-size-2;
@@ -1030,13 +1030,13 @@ ul.tabs--primary.nav.nav-tabs{
 			color: @btn-default-bg;
 			background-color: transparent;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 	}
 	div[class*='view-']{
 		h1{
 			text-align: center;
-			font-style: italic;
+			font-style: normal;
 			font-weight: lighter;
 			color: @h1-color-2;
 			font-size: @h1-size-2;
@@ -1169,7 +1169,7 @@ ul.tabs--primary.nav.nav-tabs{
 		a{
 			color: @href-default-color;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 		a:before{
 			content: ">";
@@ -1333,7 +1333,7 @@ ul.tabs--primary.nav.nav-tabs{
 		a{
 			color: @href-default-color;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 		a:before{
 			content: ">";
@@ -1574,7 +1574,7 @@ ul.tabs--primary.nav.nav-tabs{
 						padding-bottom: 0em;
 						border-bottom: none;
 						a{
-							font-style: italic;
+							font-style: normal;
 							font-weight: bold;
 						}
 					}
@@ -1626,7 +1626,7 @@ ul.tabs--primary.nav.nav-tabs{
 			color: @btn-default-bg;
 			background-color: transparent;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 	}
 	
@@ -1649,14 +1649,14 @@ ul.tabs--primary.nav.nav-tabs{
 			font-size: @size1;
 			margin-bottom: 0em;
 			padding-top: 20px !important;
-    		font-style: italic;
+    		font-style: normal;
     		font-weight: 100;
 		}
 
 		h4{
 			font-size: @size1;
 			margin-bottom: 0em;
-    		font-style: italic;
+    		font-style: normal;
     		font-weight: 100;
 		}
 	}
@@ -1879,7 +1879,7 @@ ul.tabs--primary.nav.nav-tabs{
 						text-align: right;
 						a{
 							font-weight: bold;
-							font-style: italic;
+							font-style: normal;
 							&:before{
 								content: ">";
 								margin-right: 5px;
@@ -1908,7 +1908,7 @@ ul.tabs--primary.nav.nav-tabs{
 			> .form-item-sort-by{
 			    display: inline;
 				> label{
-					font-style: italic;
+					font-style: normal;
 					margin-top: 0.5em;
 					margin-right: 2em;
 					padding-right: 0;
@@ -1936,7 +1936,7 @@ ul.tabs--primary.nav.nav-tabs{
 			}
 			a{
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 			}
 		}
 		.radio label:before{
@@ -2033,7 +2033,7 @@ ul.tabs--primary.nav.nav-tabs{
 			color: @btn-default-bg;
 			background-color: transparent;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 		ul{
 			list-style: none;
@@ -2065,7 +2065,7 @@ ul.tabs--primary.nav.nav-tabs{
 		h4, .h4-title{
 			padding-top: 10px !important;
 			font-size: @size1;
-			font-style: italic;
+			font-style: normal;
 			font-weight: 100;
 			margin-bottom: 1em;
 		}
@@ -2101,7 +2101,7 @@ ul.tabs--primary.nav.nav-tabs{
 				margin-left: 0px;
 				.node-readmore{
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					&:before{
 						content: ">";
 						padding-right: 0.35em;
@@ -2122,7 +2122,7 @@ ul.tabs--primary.nav.nav-tabs{
 		    color: @text-color-2;
 			background-color: @color0;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			&:before{
 			    content: ">";
 				padding-right: 0.35em;
@@ -2148,7 +2148,7 @@ ul.tabs--primary.nav.nav-tabs{
 				display: inline;
 				padding-top: 1em;
 				> label{
-					font-style: italic;
+					font-style: normal;
 					padding-right: 0;
 				}
 				label{
@@ -2233,7 +2233,7 @@ ul.tabs--primary.nav.nav-tabs{
 	/*
 	.pane-node-field-free, .pane-node-field-country, .pane-node-field-tool-type{
 		color: @text-color-2;
-		font-style: italic;
+		font-style: normal;
 		font-weight: bold;
 		float: left;
 		margin-top: 1em;
@@ -2288,7 +2288,7 @@ ul.tabs--primary.nav.nav-tabs{
 		padding-top: 1em;
 		a{
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			background: url("../images/content/continue-reading.png") no-repeat right center;
 			padding-right: 20px;
 		}
@@ -2298,7 +2298,7 @@ ul.tabs--primary.nav.nav-tabs{
 		padding-top: 1em;
 		a{
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			padding-right: 20px;
 		}
 	}
@@ -2314,7 +2314,7 @@ ul.tabs--primary.nav.nav-tabs{
 	.pane-node-field-external-urls{
 		a{
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			&:before{
 				content: ">";
 				padding-right: 0.35em;
@@ -2329,7 +2329,7 @@ ul.tabs--primary.nav.nav-tabs{
 		}
 		a{
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			&:before{
 			    content: ">";
 				padding-right: 0.35em;
@@ -2648,7 +2648,7 @@ ul.tabs--primary.nav.nav-tabs{
 				.views-field-title-field{
 					font-size: 1.3em;
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					margin-bottom: 10px;
 				}
 			}
@@ -2866,7 +2866,7 @@ ul.tabs--primary.nav.nav-tabs{
 				background-color: transparent;
 			    color: #003399;
 			    font-weight: bold;
-			    font-style: italic;
+			    font-style: normal;
 			    border-bottom: 1px solid #749b00;
 			}
 		}
@@ -2901,7 +2901,7 @@ ul.tabs--primary.nav.nav-tabs{
 				background-color: transparent;
 				color: @color2;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				&:before{
 					content: "> ";
 				}
@@ -2922,7 +2922,7 @@ ul.tabs--primary.nav.nav-tabs{
 }
 .node-news{
 	h1{
-		font-style: italic;
+		font-style: normal;
 		font-weight: normal;
 		color: @h1-color-2;
 		font-size: @h1-size-2;
@@ -2974,7 +2974,7 @@ article{
 		.label{
 			color: @color2;
 			font-size: 1em;
-			font-style: italic;
+			font-style: normal;
 			padding-top: 5px;
 		}
 		li[id*="facebook-share-button-"]{
@@ -3096,7 +3096,7 @@ article{
 			background-color: @color0;
 			color: @color2;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			border-bottom: 1px solid @color3;
 		}
 	}
@@ -3116,7 +3116,7 @@ article{
 			background-color: @color0;
 			color: @color2;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			&:before{
 				content: "> ";
 			}
@@ -3340,7 +3340,7 @@ article{
 			a{
 				margin-top: 1.5em;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				display: block;
 				&:before{
 					content: "> ";
@@ -3363,7 +3363,7 @@ article{
 			margin-bottom: 2em;
 			a{
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 			}
 		}
 	}
@@ -3379,7 +3379,7 @@ article{
 			a{
 				margin-top: 1.5em;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				display: inline-block;
 			}
 			&:before{
@@ -3997,7 +3997,7 @@ p.no-results{
 				float: left;
 				width: 65%;
 				margin-top: 0.5em;
-				font-style: italic;
+				font-style: normal;
 				div{
 					width: auto;
 					float: left;
@@ -4035,7 +4035,7 @@ p.no-results{
 	}
 	.field-name-field-contact-email, .field-name-field-website-of-event{
 		.field-items{
-			font-style: italic;
+			font-style: normal;
 		}
 	}
 	.field-collection-container{
@@ -4243,7 +4243,7 @@ p.no-results{
 			h3{
 				margin: 0;
 				float: left;
-				font-style: italic;
+				font-style: normal;
 				font-size: @size3;
 				font-weight: bold;
 				color: @h3-default-color;
@@ -4262,7 +4262,7 @@ p.no-results{
 				padding: 3px 0.5em;
 				margin: 0;
 				float: left;
-				font-style: italic;
+				font-style: normal;
 				font-size: @size3;
 				font-weight: bold;
 				color: @text-color-2;
@@ -4368,7 +4368,7 @@ p.no-results{
 			.partner-name{
 				h3{
 					font-weight: 100;
-					font-style: italic;
+					font-style: normal;
 					font-size: 32px;
 					margin-bottom:1em;
 				}
@@ -4380,7 +4380,7 @@ p.no-results{
 			    display: block;
 			    overflow: hidden;
 				p{
-					font-style: italic;
+					font-style: normal;
 				}
 				.quottes-left{
 					height: 25px;
@@ -4408,7 +4408,7 @@ p.no-results{
 			a{
 				color: @color2;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 			}
 		}
 	}
@@ -4472,7 +4472,7 @@ p.no-results{
 				margin-bottom: 40px;
     			padding: 0px;
 				a{
-					font-style: italic;
+					font-style: normal;
 					font-weight: bold;
 					&:before{
 						content:"> ";
@@ -4513,7 +4513,7 @@ p.no-results{
 				content: " ";
 			}
 			.btn-1-acent{
-				font-style: italic;
+				font-style: normal;
 				&:before{
 					content: "> ";
 				}
@@ -4527,7 +4527,7 @@ p.no-results{
 		p{
 			color: @color1;
 			font-size: @size1;
-			font-style: italic;
+			font-style: normal;
 			margin-top: 1.5em;
 			margin-bottom: 1.5em;
 			font-weight: 100;
@@ -4658,7 +4658,7 @@ p.no-results{
 				}
 				a{
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					&:before{
 						content: "> ";
 					}
@@ -4743,7 +4743,7 @@ p.no-results{
 					margin-bottom: 1em;
 					a{
 						font-weight: bold;
-						font-style: italic;
+						font-style: normal;
 						&:before{
 							content: "> ";
 						}
@@ -4757,7 +4757,7 @@ p.no-results{
 					margin-bottom: 1em;
 					a{
 						font-weight: bold;
-						font-style: italic;
+						font-style: normal;
 						&:before{
 							content: "> ";
 						}
@@ -4904,7 +4904,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				a{
 					color: @color3;
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					font-size: 1.4em;
 					cursor: pointer;
 				  padding: 0px 0px 20px !important;
@@ -4925,7 +4925,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				a{
 					color: @color5;
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 				}
 			}
 		}
@@ -4935,7 +4935,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			a.hwc-partner-private-link-block-title:first-child{
 				color: @color3;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				margin-bottom: 15px;
 				font-size: @size2;
 				&:before{
@@ -4980,7 +4980,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
     	a{
     		display: block;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			margin-bottom: 0.5em;
 			text-align: right;
 			width: 100%;
@@ -5019,7 +5019,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			}
 			.title{
 				font-size: 1.4em;
-				font-style: italic;
+				font-style: normal;
 				font-weight: 600;
 				text-align: center;
 				color: @color3;
@@ -5073,7 +5073,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
     	width: 33%;
     	font-weight: bold;
     	a{
-    		font-style: italic;
+    		font-style: normal;
     	}
 	}
 	.pane-node-field-country{
@@ -5120,7 +5120,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	.field-name-field-ceo{
 		.field-item{
 			font-weight: 100;
-			font-style: italic;
+			font-style: normal;
 			font-size: 32px;
 			margin-top: .5em;
 			margin-bottom:.5em;
@@ -5136,7 +5136,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 
 	.pane-node-field-quote{
-		font-style: italic;
+		font-style: normal;
 		font-weight: bold;
 		position: relative;
 		display:inline-block;
@@ -5244,7 +5244,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			display: block;
 			font-weight: bold;
 			color: @color2;
-			font-style: italic;
+			font-style: normal;
 			text-align: center;
 			&:before{
 				content: "> ";
@@ -5341,7 +5341,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				margin-bottom: 20px;
 				a{
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 				}
 			}
 		}
@@ -5940,7 +5940,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		> .form-item-sort-by{
 		    display: inline;
 			> label{
-				font-style: italic;
+				font-style: normal;
 				margin-top: 0.5em;
 				margin-right: 2em;
 				padding-right: 0;
@@ -5968,7 +5968,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		}
 		a{
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 		}
 	}
 	.radio label:before{
@@ -6613,7 +6613,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		}
 		h2{
 			font-weight: 100;
-			font-style: italic;
+			font-style: normal;
 			font-size: @size1;
 			text-align: left;
 			border-bottom: none;
@@ -6700,7 +6700,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				clear: both;
 				a{
 					display: inline;
-					font-style: italic;
+					font-style: normal;
 					font-size: inherit;
 					margin-left: 1em;
 					&:before{
@@ -6765,7 +6765,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				a{
 					color: @color2;
 					font-weight: bold;
-					font-style: italic;
+					font-style: normal;
 					display: inline-block;
 					font-size: @size4;
 					margin-bottom: 0px;
@@ -6835,7 +6835,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					font-weight: bold;
 					font-size: 1em;
 					color: @color2;
-					font-style: italic;
+					font-style: normal;
 				}
 				.glyphicon{
 					display: none;
@@ -6880,7 +6880,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		    color: @colorNormalText;
 		}
 		span{
-			font-style: italic;
+			font-style: normal;
 			font-size: 1em;
 			float: left;
 		    margin-right: 10px;
@@ -6937,7 +6937,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	    display: inline-block;
 		background-color: #e2e2e3;
 		color: #003399;
-		font-style: italic;
+		font-style: normal;
 		font-weight: bold;
 		margin-right: 2em;
 		padding: 0.5em 1.5em;
@@ -6947,7 +6947,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 	.gpep-organisation{
 		margin-top: 10px;
-		font-style: italic;
+		font-style: normal;
 	}
 	.pane-node-field-document-files,
 	.pane-node-field-file{
@@ -6955,7 +6955,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		clear: both;
 		margin-left: 0px;
 		.first.last{
-    		font-style: italic;
+    		font-style: normal;
     		> div:first-child{
     			a{
     				color: @colorNormalText;
@@ -7014,7 +7014,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			padding-top: 1em;
 			border-bottom: 1px dotted @border-default-color;
 			width: 100%;
-			font-style: italic;
+			font-style: normal;
 			li{
 				float: left;
 				margin-right: 0.5em;
@@ -7052,7 +7052,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					}
 					ul{
 						display: inline-block;
-						font-style: italic;
+						font-style: normal;
 						font-weight: bold;
 						li{
 							display: inline-block;
@@ -7078,7 +7078,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	color: @color2;
 	font-size: 1.15em;
 	font-weight: bold;
-	font-style: italic;
+	font-style: normal;
 	.quicktabs-tabs{
 		display: inline-block;
 		li{
@@ -7437,7 +7437,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		background-color: transparent;
     	color: #039;
     	font-weight: 700;
-    	font-style: italic;
+    	font-style: normal;
 	}
 	.pane-node-field-image{
 		padding-right: 15px;
@@ -7502,7 +7502,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		}
 		.help-block{
 			a{
-				font-style: italic;
+				font-style: normal;
 				font-weight: bold;
 				font-size: 1.25em;
 			}
@@ -7658,7 +7658,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				margin-bottom: 40px;
 				padding: 0px;
 				a{
-					font-style: italic;
+					font-style: normal;
 					font-weight: bold;
 					&:before{
 						content:"> ";
@@ -7827,7 +7827,7 @@ fieldset.captcha {
 			a{
 				color: #003399;
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				font-style: normal;
 				font-size: 1.3em;
 				&:before {
@@ -8267,7 +8267,7 @@ span.date-display-single{
 	font-weight: bold;
 	font-size: 0.89em;
 	display:inline-block;
-	font-style: italic;
+	font-style: normal;
 }
 
 #block-hwc-partner-hwc-partner-mostra-masquerade a::before{
@@ -8859,7 +8859,7 @@ input#edit-field-image-und-0-upload::before {
 		a{
 			color: @color2;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			&:before{
 				content: "> ";
 			}
@@ -8911,7 +8911,7 @@ input#edit-field-image-und-0-upload::before {
     	.recomended-resources-for-you{
     		color: #ffffff;
 		    font-size: 30px;
-		    font-style: italic;
+		    font-style: normal;
 		    margin-top: 1.5em;
 		    margin-bottom: 1.5em;
 		    font-weight: 100;
@@ -9025,7 +9025,7 @@ input#edit-field-image-und-0-upload::before {
 				background-color: transparent;
 			    color: #003399;
 			    font-weight: bold;
-			    font-style: italic;
+			    font-style: normal;
 			    border-bottom: 1px solid #749b00;
 			}
 		}
@@ -9392,7 +9392,7 @@ input#edit-field-image-und-0-upload::before {
 				background-color: transparent;
 			    color: @color2;
 			    font-weight: bold;
-			    font-style: italic;
+			    font-style: normal;
 			    border-bottom: 1px solid @color3;
 			}
 		}
@@ -9743,7 +9743,7 @@ input#edit-field-image-und-0-upload::before {
   display: block;
   color: #003399;
   font-weight: bold;
-  font-style: italic;
+  font-style: normal;
   text-align: center;
 }
 /*end page-node-366*/
@@ -10283,7 +10283,7 @@ input#edit-field-image-und-0-upload::before {
 		}
 		.introduction-text{
 			font-weight: 600;
-			font-style: italic;
+			font-style: normal;
 			margin-bottom: 40px;
 		}
 		//top image
@@ -11198,7 +11198,7 @@ input#edit-field-image-und-0-upload::before {
 				.body-summary{
 					p{
 						font-weight: 600;
-						font-style: italic;
+						font-style: normal;
 						margin-bottom: 25px;
 						font-size: 1.1em;
 					}
