--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -264,7 +264,7 @@ header.navbar-default{
 			right: 0;
 			top: 116px;
 			font-weight: bold;
-			font-style: italic;
+			font-style: normal;
 			a:before{
 				content: ">";
 				padding-right: 5px;
@@ -272,7 +272,7 @@ header.navbar-default{
 		}
 		 #block-hwc-partner-hwc-partner-back-to-profile{
 			    font-weight: 700;
-			    font-style: italic;
+			    font-style: normal;
 			    float: right;
 			    font-size: .89em;
 			    padding-top: 5px;
@@ -347,7 +347,7 @@ header.navbar-default{
 							a{
 								text-align: left;
 								display: inline;
-								font-style: italic;
+								font-style: normal;
 								padding:0;
 								white-space: normal;
 								text-transform: none;
