--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -877,7 +877,7 @@ ul.time-and-counters{
 			padding-top: 2em;
 			border-bottom: 0;
 			font-size: 1.7em;
-			font-style: italic;
+			font-style: normal;
 			font-weight: 400;
 			color:#dee999;
     	}
@@ -1039,7 +1039,7 @@ ul.time-and-counters{
 		}
 		.title-news{
 			font-size: 1.2em;
-			font-style: italic;
+			font-style: normal;
 			color: #003399;
 		}
 		.summary-news{
@@ -1765,7 +1765,7 @@ aside.col-md-3{
   span:nth-child(1){
     color: #003399;
     font-size: 18px;
-    font-style: italic;
+    font-style: normal;
   }
   span:nth-child(2){
     font-size: 12px;
@@ -1786,7 +1786,7 @@ aside.col-md-3{
   span:nth-child(1){
     color: #003399;
     font-size: 18px;
-    font-style: italic;
+    font-style: normal;
   }
   span:nth-child(2){
     font-size: 12px;
@@ -1857,7 +1857,7 @@ aside.col-md-3{
       font-weight: bold;
       line-height: 18px;
       text-decoration: none;
-      font-style: italic;
+      font-style: normal;
     }
     h2 a:hover{
       text-decoration: underline;
@@ -2698,7 +2698,7 @@ span.pages{
 	}
 	h2{
 		color: #003399;
-		font-style: italic;
+		font-style: normal;
 		font-weight: 400;
 		padding-top: 1em;
 		clear: both;
@@ -2958,7 +2958,7 @@ span.pages{
 						margin-top: 0;
     					line-height: 23px;
 						a{
-							font-style: italic;
+							font-style: normal;
 						    font-size: 2.1rem;
 						    font-weight: normal;
 						    padding-top: 0;
@@ -2979,7 +2979,7 @@ span.pages{
 								content:'';
 							}
 							a{
-								font-style: italic;
+								font-style: normal;
 							    font-size: 2.1rem;
 							    font-weight: normal;
 							    padding-top: 0.6em;
@@ -3497,7 +3497,7 @@ div.workbench-info-block{
 
 	.hwc-alphabet-container{
 		a{
-			font-style: italic;
+			font-style: normal;
 		}
 	}
 
@@ -3579,7 +3579,7 @@ div.workbench-info-block{
 
 	.pane-content{
 	 	padding: 10px 20px 20px 20px;
-	    font-style: italic;
+	    font-style: normal;
 	    color: #FFF;
 	}
 }
@@ -3902,7 +3902,7 @@ body.ocp .box-type-partner{
 		padding: 1em;
 		padding-left: 1em;
 		padding-right: 1em;
-		font-style: italic;
+		font-style: normal;
 		color: #FFF;
 	}
 
@@ -6186,7 +6186,7 @@ body.european-week{
 			a.hwc-partner-private-link-block-title:first-child{
 				
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 				margin-bottom: 15px;
 				
 				&:before{
