--- a/docroot/sites/all/themes/hwc_frontend/less/overrides.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/overrides.less
@@ -377,7 +377,7 @@ ul li.leaf {
 // Submitted
 .submitted {
   margin-bottom: 1em;
-  font-style: italic;
+  font-style: normal;
   font-weight: normal;
   color: #777;
 }
