--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -809,7 +809,7 @@ header.navbar-default{
 			margin-top: 0;
 			background-color: @bg-color-2;
 			padding: 15px;
-			font-style: italic;
+			font-style: normal;
 			padding: 0;
 			&:before{
 				content: "> ";
@@ -1949,7 +1949,7 @@ header.navbar-default{
     	font-weight: bold;
 		padding-left: @margin-movil;
     	a{
-    		font-style: italic;
+    		font-style: normal;
     	}
     	&:last-child{
     		width: 100%;
@@ -2056,7 +2056,7 @@ header.navbar-default{
 			margin-bottom: 20px;
 			a{
 				font-weight: bold;
-				font-style: italic;
+				font-style: normal;
 			}
 		}
 	}
