HW20-335 - Social media: All button is missing

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -18517,6 +18517,7 @@ input#edit-field-image-und-0-upload::before {
 }
 .page-social-media-centre #social-dashboard-media-centre-form > div {
   float: right;
+  margin-right: 5em;
 }
 .page-social-media-centre #social-dashboard-media-centre-form > div .form-type-select {
   margin-bottom: 0px;
