--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -9408,6 +9408,7 @@ input#edit-field-image-und-0-upload::before {
 		margin-top: -10px;
 		>div{
 			float: right;
+			margin-right:5em;
 			.form-type-select{
 				margin-bottom: 0px;
 				display: inline-block;
