--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5525,14 +5525,14 @@ body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters
 }
 body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters-block .more_newsletters,
 body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters-block .less_newsletters {
-  background: url(../images/ico-plus-20.png) no-repeat 98.5% 2px #0030a0;
+  background: url(../images/ico-plus-20.png) no-repeat 97.5% 3px #0030a0;
   text-transform: uppercase;
   color: #FFF;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  padding: 3px 3.5em 4px 0.7em;
+  padding: 3px 3.5em 3px 0.7em;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -5544,7 +5544,7 @@ body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters
 body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters-block .more_newsletters:hover,
 body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters-block .less_newsletters:hover {
   color: #FFF;
-  background: url(../images/ico-plus-20-hover.png) no-repeat 98.5% 2px #8fc900;
+  background: url(../images/ico-next-20-white-hover.png) no-repeat 97.5% 3px #acc700;
   text-decoration: none;
 }
 body.newsletter .pane-osha-newsletter-osha-newsletter-latest #latest-newsletters-block .more_newsletters:before,
