--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4575,6 +4575,7 @@ body{
 			font-size: 1em;
 		    text-align: left;
 		    padding-left: 10px;
+		    padding-right: 10px;
 		    color: #0030a0;
 		    /*HW20-175 Become a Campaign Partner - The title of the text in boxes should be bold*/
 			font-weight: bold;
